agregue los metas en hs
coloque los limites en hbs para componentes meta

--- a/views/registro.hbs
+++ b/views/registro.hbs
@@ -9,17 +9,7 @@
 
 <head>
 	<title>PubDev</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<meta name="DC.Language" SCHEME="RFC1766" content="Spanish">
-	<meta name="author" content="Sebastian Roa Meneses">
-	<meta name="reply-to" content="Serome111@gmail.com">
-	<link rev="made" href="mailto:Serome111@gmail.com">
-	<meta name="description" content="Comunidad de aprendizaje de desarrolladores del huila">
-	<meta name="KEYWORDS" content="palabras clave">
-	<meta name="Resource-type" content="Index">
-	<meta name="Revisit-after" content="60 days">
-	<meta name="robots" content="follow">
+	{{>head}}
 	<link rel="icon" href="images/icono_low.png">
 
 	<link rel="stylesheet" href="assets/css/main.css" />
