--- a/views/utilidades/head.hbs
+++ b/views/utilidades/head.hbs
@@ -10,3 +10,4 @@
 <meta name="Resource-type" content="Index">
 <meta name="Revisit-after" content="60 days">
 <meta name="robots" content="follow">
+<title>PubDev</title>
