--- a/views/index.hbs
+++ b/views/index.hbs
@@ -32,17 +32,7 @@
 		<!-- Main -->
 		<div id="main">
 
-			<nav id="nav">
-				<ul class="links">
-					<li><a href="/" class="active">INICIO</a></li>
-					<li><a href="/registro">REGISTRATE</a></li>
-					<li><a href="/eventos">EVENTOS</a></li>
-					<li><a href="/salondefama">SALON DE LA FAMA</a></li>
-					<li><a href="/equipo">EQUIPO</a></li>
-
-					<!--<li><a href="#">PATROCINADORES</a></li> -->
-				</ul>
-			</nav>
+			{{> nav}}
 
 			<!-- Introduction -->
 			<section id="intro" class="main special">
@@ -233,30 +223,7 @@
 			</section>
 		</div>
 
-		<!-- Footer -->
-		<footer id="footer">
-			<section style="align-items: center;">
-				<header class="major">
-					<h2>Nuestras redes sociales</h2>
-				</header>
-
-
-			</section>
-			<section style="align-items: center;">
-				<ul class="icons">
-					<li><a href="https://twitter.com/pubdev01" target="_blank" class="icon brands fa-twitter alt"><span
-								class="label">Twitter</span></a></li>
-					<li><a href="https://www.facebook.com/pubdev" target="_blank"
-							class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
-					<li><a href="https://www.instagram.com/pubdev" target="_blank"
-							class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
-					<li><a href="https://t.me/joinchat/DS7d-VbynYfq5sKTrMDYtA" target="_blank"
-							class="icon brands fa-telegram alt"><span class="label">Telegram</span></a></li>
-					<li><a href="https://www.youtube.com/channel/UCkWzkTACfvry7fwIkFRoKIQ" target="_blank"
-							class="icon brands fa-youtube alt"><span class="label">YouTube</span></a></li>
-				</ul>
-			</section>
-		</footer>
+		{{> footer}}
 
 	</div>
 
