partials de componentes en todas las vistas y swal para darle color

--- a/views/admIndex.hbs
+++ b/views/admIndex.hbs
@@ -3,12 +3,7 @@
 
 <head>
 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-
-  <title>Admin Pubdev</title>
+ {{> head}}
   <link href="assets/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/css/simple-sidebar.css" rel="stylesheet">
 </head>
