--- a/views/utilidades/head.hbs
+++ b/views/utilidades/head.hbs
@@ -10,4 +10,5 @@
 <meta name="Resource-type" content="Index">
 <meta name="Revisit-after" content="60 days">
 <meta name="robots" content="follow">
+<link rel="icon" href="images/icono_low.png">
 <title>PubDev</title>
