--- a/views/notFound.hbs
+++ b/views/notFound.hbs
@@ -2,20 +2,7 @@
 <html lang="es">
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport"
-		content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<meta name="DC.Language" SCHEME="RFC1766" content="Spanish">
-	<meta name="author" content="Sebastian Roa Meneses">
-	<meta name="reply-to" content="Serome111@gmail.com">
-	<link rev="made" href="mailto:Serome111@gmail.com">
-	<meta name="description" content="Software community, Software Developer">
-	<meta name="KEYWORDS" content="Developer, community, engineers">
-	<meta name="Resource-type" content="Index">
-	<meta name="Revisit-after" content="60 days">
-	<meta name="robots" content="follow">
-	<link rel="icon" href="images/icono_low.png">
+	{{> head}}
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<link rel="stylesheet"
 		href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css"
@@ -56,30 +43,7 @@
 		</div>
 
 
-		<!-- Footer -->
-		<footer id="footer">
-			<section style="align-items: center;">
-				<header class="major">
-					<h2>Nuestras redes sociales</h2>
-				</header>
-
-
-			</section>
-			<section style="align-items: center;">
-				<ul class="icons">
-					<li><a href="https://twitter.com/pubdev01" target="_blank" class="icon brands fa-twitter alt"><span
-								class="label">Twitter</span></a></li>
-					<li><a href="https://www.facebook.com/pubdev" target="_blank"
-							class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
-					<li><a href="https://www.instagram.com/pubdev" target="_blank"
-							class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
-					<li><a href="https://t.me/joinchat/DS7d-VbynYfq5sKTrMDYtA" target="_blank"
-							class="icon brands fa-telegram alt"><span class="label">Telegram</span></a></li>
-					<li><a href="https://www.youtube.com/channel/UCkWzkTACfvry7fwIkFRoKIQ" target="_blank"
-							class="icon brands fa-youtube alt"><span class="label">YouTube</span></a></li>
-				</ul>
-			</section>
-		</footer>
+		{{> footer}}
 
 	</div>
 
