--- a/views/puntos.hbs
+++ b/views/puntos.hbs
@@ -2,20 +2,7 @@
 <html lang="es">
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport"
-		content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<meta name="DC.Language" SCHEME="RFC1766" content="Spanish">
-	<meta name="author" content="Sebastian Roa Meneses">
-	<meta name="reply-to" content="Serome111@gmail.com">
-	<link rev="made" href="mailto:Serome111@gmail.com">
-	<meta name="description" content="Software community, Software Developer">
-	<meta name="KEYWORDS" content="Developer, community, engineers">
-	<meta name="Resource-type" content="Index">
-	<meta name="Revisit-after" content="60 days">
-	<meta name="robots" content="follow">
-	<link rel="icon" href="images/icono_low.png">
+	{{> head}}
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<link rel="stylesheet"
 		href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css"
@@ -41,16 +28,7 @@
 		<!-- Main -->
 		<div id="main">
 
-			<nav id="nav">
-				<ul class="links">
-					<li><a href="/" class="active">INICIO</a></li>
-					<li><a href="/registro">REGISTRATE</a></li>
-					<li><a href="/eventos">EVENTOS</a></li>
-					<li><a href="/salondefama">SALON DE LA FAMA</a></li>
-					<li><a href="/equipo">EQUIPO</a></li>
-					<!--<li><a href="#">PATROCINADORES</a></li> -->
-				</ul>
-			</nav>
+			{{> nav}}
 
 			<section id="content" class="main">
 
@@ -158,47 +136,7 @@
 			</section>
 		</div>
 
-		<!-- Footer -->
-		<footer id="footer">
-			<!--<section>
-				<h2>Aliquam sed mauris</h2>
-				<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus
-					etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula
-					erat egestas velit, vitae tincidunt odio.</p>
-				<ul class="actions">
-					<li><a href="#l" class="button">Learn More</a></li>
-				</ul>
-			</section>
-			<section>
-				<h2>Contáctenos</h2>
-				<dl class="alt">
-					<dt>Dirección</dt>
-					<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
-					<dt>Télefono</dt>
-					<dd>(000) 000-0000 x 0000</dd>
-					<dt>Email</dt>
-					<dd><a href="#">information@untitled.tld</a></dd>
-				</dl> -->
-			<section style="align-items: center;">
-				<h2>Nuestras redes sociales</h2>
-				<ul class="icons">
-					<li><a href="https://twitter.com/pubdev01" target="_blank" class="icon brands fa-twitter alt"><span
-								class="label">Twitter</span></a></li>
-					<li><a href="https://www.facebook.com/pubdev" target="_blank"
-							class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
-					<li><a href="https://www.instagram.com/pubdev" target="_blank"
-							class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
-					<!--<li><a href="https://github.com/PubDevs" target="_blank" class="icon brands fa-github alt"><span
-								class="label">GitHub</span></a></li> -->
-					<li><a href="https://t.me/joinchat/DS7d-VbynYfq5sKTrMDYtA" target="_blank"
-							class="icon brands fa-telegram alt"><span class="label">Telegram</span></a></li>
-					<li><a href="https://www.youtube.com/channel/UCkWzkTACfvry7fwIkFRoKIQ" target="_blank"
-							class="icon brands fa-youtube alt"><span class="label">YouTube</span></a></li>
-				</ul>
-
-				<h4 class="right">Hecho con el ♥</h4>
-			</section>
-		</footer>
+		{{> footer}}
 
 	</div>
 
