--- a/views/registro.hbs
+++ b/views/registro.hbs
@@ -9,8 +9,6 @@
 
 <head>
 	{{>head}}
-	<link rel="icon" href="images/icono_low.png">
-
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -131,30 +129,7 @@
 
 		</div>
 
-		<!--Footer-->
-		<footer id="footer">
-			<section style="align-items: center;">
-				<header class="major">
-					<h2>Nuestras redes sociales</h2>
-				</header>
-
-
-			</section>
-			<section style="align-items: center;">
-				<ul class="icons">
-					<li><a href="https://twitter.com/pubdev01" target="_blank" class="icon brands fa-twitter alt"><span
-								class="label">Twitter</span></a></li>
-					<li><a href="https://www.facebook.com/pubdev" target="_blank"
-							class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
-					<li><a href="https://www.instagram.com/pubdev" target="_blank"
-							class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
-					<li><a href="https://t.me/joinchat/DS7d-VbynYfq5sKTrMDYtA" target="_blank"
-							class="icon brands fa-telegram alt"><span class="label">Telegram</span></a></li>
-					<li><a href="https://www.youtube.com/channel/UCkWzkTACfvry7fwIkFRoKIQ" target="_blank"
-							class="icon brands fa-youtube alt"><span class="label">YouTube</span></a></li>
-				</ul>
-			</section>
-		</footer>
+		{{> footer}}
 
 	</div>
 
