modificacion en la vista equipo

--- a/views/equipo.hbs
+++ b/views/equipo.hbs
@@ -134,7 +134,7 @@
                         <p>Un apasionado por las artes y la tecnologia, que encontró en el desarrollo de 
                             software la combinación de ambos mundos el punto ideal para expresar su talento.  
                             Disfruta de la lectura, los viajes, la cultura geek y charlas acompañadas de un buen café.
-                            Entusiaste por la constante busqueda del aprendizaje y trascendencia de las cosa.</p>
+                            Entusiasta por la constante busqueda del aprendizaje y trascendencia de las cosa.</p>
                         <footer class="major">
                             <ul class="icons">
                                 
