--- a/views/equipo.hbs
+++ b/views/equipo.hbs
@@ -92,7 +92,7 @@
 
                         </footer>
                     </div>
-                    <span class="image"><img src="images/DANA.png" alt="" /></span>
+                    <span class="image"><img src="images/yeral.jpg" alt="" /></span>
                 </div>
             </section>
 
