--- a/views/generic1.hbs
+++ b/views/generic1.hbs
@@ -78,6 +78,14 @@
 								web, bugHunter, pentester.</p>
 						</li>
 					</ul>
+
+					<h3>Parte 1</h3>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/_oj4OMyt4UE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<h3>Parte 2</h3>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/B0ImIo23-Gc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<h3>Parte 3</h3>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/n1WCl8AJ2mc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					
 					<footer class="major">
 						<ul class="actions special">
 							<li><a target="_blank" href="https://www.youtube.com/channel/UCkWzkTACfvry7fwIkFRoKIQ"
