--- a/views/generic3.hbs
+++ b/views/generic3.hbs
@@ -23,7 +23,7 @@
 		<!-- Header -->
 		<header id="header">
 			<h1>EVENTO</h1>
-			<p>Primer Webinar de PubDev</p>
+			<p>Hablemos de Inteligencia Artificial</p>
 		</header>
 
 		<!-- Main -->
@@ -31,14 +31,13 @@
 
 			{{> nav}}
 
-
 			<!-- Content -->
 			<section id="content" class="main">
 
 				<header class="major main special">
-					<h2>HABLEMOS DE FRONTEND</h2>
+					<h2>HABLEMOS DE INTELIGENCIA ARTIFICIAL</h2>
 				</header> <span class=" image" style="width: 70%; display:block; margin:auto; "><img
-						src="images/evento1.png" alt="Imagen evento"></span><br>
+						src="images/evento4.jpg" alt="Imagen evento"></span><br>
 
 				<section id="first" class="main special">
 					<header class="major">
@@ -47,44 +46,56 @@
 					<ul class="features">
 						<li>
 							<span class="icon major "><img style="width: 200px; height: 200px; border-radius: 100%;"
-									src="images/oscar.jpg" alt="" /></span>
-							<h3 style="text-transform: uppercase;">Oscar Barajas Tavares</h3>
-							<p style="text-align: justify;">Foundation Layer & Frontend Developer en Platzi, Facebook
-								Developer Lead,
-								ReactJS Developer, Speaker y Blogger.</p>
+									src="images/anaya.jpg" alt="" /></span>
+							<h3 style="text-transform: uppercase;">Andrés Anaya Isaza</h3>
+							<p style="text-align: justify;">Profesor, consultor y expositor en ciberseguridad.
+
+								Ingeniero de sistemas, Msc, PhD(C)
+								Científico en inteligencia artificial e imagenología diagnóstica.
+
+								Apasionado de la Inteligencia Artificial, Divulgador Científico, Investigador en
+								Bioingeniería, Neurociencia, Biomedicina y Guitarrista de Rock</p>
 							</p>
 						</li>
 						<li>
 							<span class="icon major "><img style="width: 200px; height: 200px; border-radius: 100%;"
-									src="images/luisa.jpg" alt="" /></span>
-							<h3 style="text-transform: uppercase;">Luisa Rodríguez</h3>
-							<p style="text-align: justify;">Front-End dev & Data Analyst. Líder PionerasDev & PyLadies
-								Colombia, co-organizador
-								Git Conf Colombia.</p>
+									src="images/carolinaUribe.png" alt="" /></span>
+							<h3 style="text-transform: uppercase;">Carolina Uribe</h3>
+							<p style="text-align: justify;">Co – founder Atrae Negocios, una empresa para generar
+								oportunidades de negocios empresariales.
+
+								Emprendedora desde el 2017, con conocimiento y pasión por la ciencia de datos con
+								Python.
+
+								Co Host de LinkedInLocal Colombia, la comunidad de LinkedIn. Embajadora de WIDS junto a
+								Data Science Fem para formación y empoderamiento de científicas de datos.
+
+							</p>
 						</li>
 						<li>
 							<span class="icon major "><img style="width: 200px; height: 200px; border-radius: 100%;"
-									src="images/herman.jpg" alt="" /></span>
-							<h3 style="text-transform: uppercase;">Herman Orlando Morales López</h3>
-							<p style="text-align: justify;">Frontend Developer con 10 años de experiencia, Mobile
-								developer 3 años
-								de experiencia. Actualmente UX-UI developer. Peleador profesional de MMA
-								Apasionado de Flutter, React, Angular, SpringBoot, Kotlin</p>
+									src="images/CristianGarcia.jpg" alt="" /></span>
+							<h3 style="text-transform: uppercase;">Cristian García</h3>
+							<p style="text-align: justify;">Machine Learning Engineer con experiencia en matemáticas y
+								física. Amplia experiencia en la creación de aplicaciones de Deep Learning en campos
+								como vehículos autónomos, análisis de video y manufactura..</p>
 						</li>
 					</ul>
 
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/q0df3EdriYA" frameborder="0"
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/044MFcRDcKY" frameborder="0"
 						allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 						allowfullscreen></iframe>
 
 					<footer class="major">
 						<ul class="actions special">
-							<li><a target="_blank" href="https://www.youtube.com/watch?v=q0df3EdriYA" class="button">VER
+							<li><a target="_blank" href="https://www.youtube.com/watch?v=044MFcRDcKY" class="button">VER
 									WEBINAR</a></li>
 						</ul>
 					</footer>
 				</section>
 			</section>
+
+
 		</div>
 
 		{{> footer}}
