--- a/views/index.hbs
+++ b/views/index.hbs
@@ -63,6 +63,7 @@
 					<h2>EVENTOS RECIENTES</h2>
 				</header>
 				<ul class="features">
+					<!-- EVENTO HABLEMOS DE FRONT END-->
 					<li><a href="/evento" style="text-decoration:none;">
 							<div class="card" style="width: 18rem; height: 28rem;">
 								<img src="images/evento1.png" class="card-img-top" alt="...">
@@ -76,16 +77,47 @@
 							</div>
 						</a>
 					</li>
+					<!-- EVENTO HABLEMOS DE CIBERSEGURIDAD-->
 					<li><a href="/evento2" style="text-decoration:none;">
 						<div class="card" style="width: 18rem; height: 28rem;">
-							<img style="width: 288px; height: 223px;" src="images/eventoHDCS.jpg" class="card-img-top"
+							<img style="width: 18rem; height: 223px;" src="images/eventoHDCS.jpg" class="card-img-top"
 								alt="...">
 							<div class="card-body">
-								<h3><strong class="text-strong"> Hablemos de ciberseguridad</strong></h3>
+								<h3><strong class="text-strong"> Hablemos de Ciberseguridad</strong></h3>
 								<h4><strong>Fecha</strong>: 04/Mayo/2020 <br>
 									<strong>Hora</strong>: 06:00 P.M.</h4>
 								<p class="card-text"><strong>Invitados especiales: </strong> <br> Cristián Rojas, Kelly
 									Villa y Julio Augusto Rangel</p>
+							</div>
+						</div>
+						</a>
+					</li>
+				</ul>
+				<ul class="features">
+					<!-- EVENTO HABLEMOS DE CIBERSEGURIDAD 1.1 -->
+					<li><a href="/evento3" style="text-decoration:none;">
+						<div class="card" style="width: 18rem; height: 28rem;">
+							<img style="width: 288px; height: 223px;" src="images/evento3.jpg" class="card-img-top"
+								alt="...">
+							<div class="card-body">
+								<h3><strong class="text-strong"> Hablemos de Ciberseguridad 1.1</strong></h3>
+								<h4><strong>Fecha</strong>: 18/Mayo/2020 <br>
+									<strong>Hora</strong>: 06:00 P.M.</h4>
+								<p class="card-text"><strong>Invitados especiales: </strong> <br> Manuel Hernández, Raúl Alderete y Alejandro Rivera</p>
+							</div>
+						</div>
+						</a>
+					</li>
+					<!-- EVENTO HABLEMOS DE INTELIGENCIA ARTIFICIAL-->
+					<li><a href="/evento4" style="text-decoration:none;">
+						<div class="card" style="width: 18rem; height: 28rem;">
+							<img style="width: 288px; height: 223px;" src="images/evento4.jpg" class="card-img-top"
+								alt="...">
+							<div class="card-body">
+								<h3><strong class="text-strong"> Hablemos de Inteligencia Artificial</strong></h3>
+								<h4><strong>Fecha</strong>: 25/Mayo/2020 <br>
+									<strong>Hora</strong>: 06:00 P.M.</h4>
+								<p class="card-text"><strong>Invitados especiales: </strong> <br> Andrés Anaya, Cristian García y Carolina Uribe</p>
 							</div>
 						</div>
 						</a>
@@ -126,7 +158,7 @@
 					</li>
 					<li>
 						<span class="icon major "><img style="width: 200px; height: 200px; border-radius: 100%;"
-								src="images/DANA.png" alt="" /></span>
+								src="images/yeral.jpg" alt="" /></span>
 						<h3>Dana Yeraldinne García</h3>
 						<p>Estudiante de Ingeniería de Software.
 							<br> React Developer
