--- a/views/eventos.hbs
+++ b/views/eventos.hbs
@@ -39,8 +39,8 @@
 						<header class="major">
 							<h2>Histórico de eventos</h2>
 							<div class="grid-container">
-								<div class="grid-item">2 <br> Actividades realizadas</div>
-								<div class="grid-item">41 <br> Participantes</div>
+								<div class="grid-item">4 <br> Actividades realizadas</div>
+								<div class="grid-item">128 <br> Participantes</div>
 							</div>
 						</header>
 						<!-- <ul class="actions">
@@ -55,7 +55,7 @@
 
 				<section id="content" class="tiles">
 
-
+					<!-- EVENTO Hablemos de FrontEnd-->
 					<article class="style1">
 						<span class="image">
 							<img src="images/evento1.png" alt="Imagen evento">
@@ -69,7 +69,7 @@
 							</div>
 						</a>
 					</article>
-
+					<!-- EVENTO Hablemos de ciberseguridad-->
 					<article class="style1">
 						<span class="image">
 							<img style="width: 140%;" src="images/eventoHDCS.jpg" alt="Imagen evento">
@@ -78,66 +78,42 @@
 
 							<div class="content">
 								<h2 style="color: white;">Hablemos de ciberseguridad</h2>
-								<p><strong>Fecha:</strong>Lunes, 04 de abril</p>
+								<p><strong>Fecha:</strong>Lunes, 04 de Mayo</p>
 								<p><strong>Hora:</strong>06:00 P.M.</p>
 							</div>
 						</a>
 					</article>
-					<!-- <article class="style2">
-					<span class="image">
-						<img src="images/pic02.jpg" alt="" />
-					</span>
-					<a href="/evento">
-						<h2>Lorem</h2>
-						<div class="content">
-							<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-						</div>
-					</a>
-				</article>
-				<article class="style3">
-					<span class="image">
-						<img src="images/pic03.jpg" alt="" />
-					</span>
-					<a href="/evento">
-						<h2>Feugiat</h2>
-						<div class="content">
-							<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-						</div>
-					</a>
-				</article>
-				<article class="style4">
-					<span class="image">
-						<img src="images/pic04.jpg" alt="" />
-					</span>
-					<a href="/evento">
-						<h2>Tempus</h2>
-						<div class="content">
-							<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-						</div>
-					</a>
-				</article>
-				<article class="style5">
-					<span class="image">
-						<img src="images/pic05.jpg" alt="" />
-					</span>
-					<a href="/evento">
-						<h2>Aliquam</h2>
-						<div class="content">
-							<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-						</div>
-					</a>
-				</article>
-				<article class="style6">
-					<span class="image">
-						<img src="images/pic06.jpg" alt="" />
-					</span>
-					<a href="/evento">
-						<h2>Veroeros</h2>
-						<div class="content">
-							<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-						</div>
-					</a>
-				</article> -->
+					
+					<!-- EVENTO Hablemos de ciberseguridad 1.1-->
+					<article class="style1">
+						<span class="image">
+							<img style="width: 140%;" src="images/evento3.jpg" alt="Imagen evento">
+						</span>
+						<a href="/evento3">
+
+							<div class="content">
+								<h2 style="color: white;">Hablemos de ciberseguridad 1.1</h2>
+								<p><strong>Fecha:</strong>Lunes, 18 de mayo</p>
+								<p><strong>Hora:</strong>06:00 P.M.</p>
+							</div>
+						</a>
+					</article>
+
+					<!-- EVENTO Hablemos de Inteligencia Artificial-->
+					<article class="style1">
+						<span class="image">
+							<img style="width: 140%;" src="images/evento4.jpg" alt="Imagen evento">
+						</span>
+						<a href="/evento4">
+
+							<div class="content">
+								<h2 style="color: white;">Hablemos de Inteligencia Artificial</h2>
+								<p><strong>Fecha:</strong>Lunes, 25 de abril</p>
+								<p><strong>Hora:</strong>06:00 P.M.</p>
+							</div>
+						</a>
+					</article>
+					
 				</section>
 			</section>
 		</div>
