agregando helmet + partipantes

--- a/views/eventos.hbs
+++ b/views/eventos.hbs
@@ -40,7 +40,7 @@
 							<h2>Histórico de eventos</h2>
 							<div class="grid-container">
 								<div class="grid-item">4 <br> Actividades realizadas</div>
-								<div class="grid-item">128 <br> Participantes</div>
+								<div class="grid-item">{{cantidad}} <br> Participantes</div>
 							</div>
 						</header>
 						<!-- <ul class="actions">
