--- a/views/equipo.hbs
+++ b/views/equipo.hbs
@@ -118,7 +118,7 @@
 
                         </footer>
                     </div>
-                    <span class="image"><img src="images/juan.jpg" alt="" /></span>
+                    <span class="image"><img src="images/Juan.jpg" alt="" /></span>
                 </div>
             </section>
 
