--- a/views/eventos.hbs
+++ b/views/eventos.hbs
@@ -87,7 +87,7 @@
 					<!-- EVENTO Hablemos de ciberseguridad 1.1-->
 					<article class="style1">
 						<span class="image">
-							<img style="width: 140%;" src="images/evento3.jpg" alt="Imagen evento">
+							<img style="width: 140%;" src="images/EVENTO3.jpg" alt="Imagen evento">
 						</span>
 						<a href="/evento3">
 
